<resources>
    <string name="app_name">TravelApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">SEARCH</string>
    <string name="trips">TRIPS</string>
    <string name="bookmarks">BOOKMARKS</string>
    <string name="settings">SETTINGS</string>
    <string name="title_search">Location for you</string>
    <string name="moscow">Moscow</string>
    <string name="krd">Krasnodar</string>
    <string name="spb">St. Petersburg</string>
    <string name="saratov">Saratov</string>
    <string name="voronezh">Voronezh</string>
    <string name="novosibirsk">Novosibirsk</string>
    <string name="kazan">Kazan</string>
    <string name="anapa">Anapa</string>
    <string name="sochi">Sochi</string>
    <string name="armavir">Armavir</string>
    <string name="yekaterinburg">Yekaterinburg</string>
    <string name="orel">Orel</string>
    <string name="ufa">Ufa</string>
    <string name="smolensk">Smolensk</string>
    <string name="days">DAYS</string>
    <string name="price">596</string>
    <string name="dollar">$</string>
    <string name="russia">Russia</string>
    <string name="to_author_page">На страницу автора дизайна</string>
    <string name="book">BOOK</string>

    <string name="big_text">The recommended placement of elements in a top app bar for left-to-right languages is:

Place navigation on the far left
Place any titles to the right of navigation
Place contextual actions to the right of navigation
Place an overflow menu (if used) to the far right
For right-to-left languages, placement positions should be flipped.</string>
    <string name="open_in">open in</string>
    <string name="tip">TIP</string>
    <string name="incl_taxes_fees"><![CDATA[(Incl. Taxes & Fees)]]></string>
    <string name="flight_hotel_for"><![CDATA[Flight & Hotel for]]></string>
    <string name="search_hint">Search in trips</string>


</resources>
